<resources>
    <string name="app_name">GDI</string>
    <string name="scorecardText">Hello, Welcome to GDl, how may we\nassist you?</string>
    <string name="frontoffice">Front Office</string>
    <string name="luxuryhotelmilan">Luxury Hotel Milan</string>
    <string name="reservation">Reservation</string>
    <string name="re_enter_password">Re-enter password..</string>
    <string name="password_not_same">Mismatch password..</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="default_progress_dialog_message">Loading...</string>
    <string name="alert_dialog_logout_title">Logout</string>
    <string name="alert_dialog_logout_msg">Are you sure you want to logout ?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="hotel">Hotel</string>
    <string name="score">Score</string>
    <string name="dummyscore">89.9%</string>
    <string name="hoteloverall">Hotel Overall</string>
    <string name="overall">Overall</string>
    <string name="department">Department</string>
    <string name="dummyaveragescore">Avg. Score = 78.4%</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_password">Password must contain atleast 6 characters</string>
    <string name="enter_first_name">Enter first name..</string>
    <string name="enter_email">Enter email id..</string>
    <string name="enter_valid_email">Enter valid email..</string>
    <string name="enter_phone">Enter phone number..</string>
    <string name="enter_valid_phone">Enter phone number between 6 to 16 digits</string>
    <string name="resetpassword">Reset Password</string>
    <string name="enteryourotp">Enter your OTP</string>
    <string name="enteryourpassword">Enter your password</string>
    <string name="reenteredpassword">Confirm your password</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signinButton">Sign In</string>
    <string name="forgetPasswordText">Forget Password ?</string>
    <string name="brand">Brand</string>
    <string name="auditround">Audit Round</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="location">Location</string>
    <string name="searchcriteria">SEARCH CRITERIA</string>
    <string name="search">Search</string>
    <string name="audit_month">Audit Month</string>
    <string name="audit_type">Audit Type</string>
    <string name="audit_name">Audit Name</string>
    <string name="audit_status">Audit Status</string>
    <string name="label_brush">Brush</string>
    <string name="label_emoji">Emoji</string>
    <string name="label_sticker">Sticker</string>
    <string name="label_eraser">Eraser</string>
    <string name="label_text">Text</string>
    <string name="label_filter">Filter</string>
    <string name="label_adjust">Adjust</string>
    <string name="home">Home</string>
    <string name="analysis">Analysis</string>
    <string name="standard_report">Standard Report</string>
    <string name="action_plan">Action Plan</string>
    <string name="user_profile">Profile</string>
    <string name="profile">Profile</string>
    <string name="faq">FAQ</string>
    <string name="signin">Sign In</string>
    <string name="logout">Logout</string>
    <string name="mystery_audit">Mystery Audit</string>
    <string name="degree_analysis">360 Degree\nAnalysis</string>
    <string name="heart_house">Heart\nof the House</string>
    <string name="selfassessment">Self Assessment</string>
    <string name="gm_score_card">GM Score\nCard</string>
    <string name="competition_benchmarking">Competition\nBenchmarking</string>
    <string name="report">Report</string>
    <string name="audit_dashboard">Audit Dashboard</string>
    <string name="dashboard">Dashboard</string>
    <string name="combine_dashboard">Combined Dashboard</string>
    <string name="audit">Audit</string>
    <string name="overallbrand">Overall\nBrand</string>
    <string name="detailedsummary">Detailed Summary</string>
    <string name="executivesummary">Executive Summary</string>
    <string name="highlights">Highlights</string>
    <string name="internal_audit">Internal Audit</string>
    <string name="audio_images">Audio/Images</string>
    <string name="back_house">Back of the\nHouse Audit</string>
    <string name="integrity">Integrity</string>
    <string-array name="occupation">
        <item>--Select Occupation--</item>
        <item>Traveller</item>
        <item>Service</item>
        <item>Business</item>
        <item>Self Employed</item>
        <item>Photographer</item>
    </string-array>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_id">Email Id</string>
    <string name="username_hint">Username</string>
    <string name="phone">Phone</string>
    <string name="role">Role</string>
    <string name="save">Save</string>
    <string name="next">Next</string>
    <string name="prev">Prev</string>
    <string name="hotel_name">Hotel Name</string>
    <string name="audit_round">Audit Round</string>
    <string name="audit_date">Audit Date</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="status">Status :</string>
    <string name="planned">Planned</string>
    <string name="rejected">Rejected</string>
    <string name="approved">Approved</string>
    <string name="overdue">Overdue</string>
    <string name="completed">Completed</string>
    <string name="action_plan_city">City : </string>
    <string name="general_manager">General Manager</string>
    <string name="overall_score">Overall Score</string>
    <string name="front_office">Front Office</string>
    <string name="guest_services_telephone">Guest Services</string>
    <string name="concierge">Concierge</string>
    <string name="housekeeping">Housekeeping</string>
    <string name="product">Inspection</string>
    <string name="product_audit">Product Audit</string>
    <string name="pre_opening_audit">Pre Opening\nAudit</string>
    <string name="food_beverage">Food &amp; Beverage</string>
    <string name="recreation">Recreation</string>
    <string name="rank">Rank</string>
    <string name="audit_id">AUDIT ID</string>
    <string name="audit_type_">AUDIT TYPE</string>
    <string name="audit_name_">AUDIT NAME</string>
    <string name="brand_">BRAND</string>
    <string name="location_">LOCATION</string>
    <string name="due_date">DUE DATE</string>
    <string name="created_by">CREATED BY</string>
    <string name="name_">NAME</string>
    <string name="email">EMAIL</string>
    <string name="brand_standard">BRAND STANDARD</string>
    <string name="executive_summary">EXECUTIVE SUMMARY</string>
    <string name="detailed_summary">DETAILED SUMMARY</string>
    <string name="auditor">AUDITOR NAME</string>
    <string name="reviewer">REVIEWER NAME</string>
    <string name="overdue_">OVERDUE</string>
    <string name="close_to_due_date">CLOSE TO THE DUE DATE</string>
    <string name="status_">STATUS</string>
    <string name="all">ALL</string>
    <string name="any">ANY</string>
    <string name="instruction">Instruction</string>
    <string name="reviewer_rating">Reviewer Rating</string>
    <string name="reviewer_feedback">Reviewer Feedback</string>
    <string name="submit">Submit</string>
    <string-array name="audit_action_filter">
        <item>ALL</item>
        <item>CREATED</item>
        <item>SAVED</item>
        <item>REJECTED</item>
        <item>SUBMITTED</item>
        <item>REVIEWED</item>
    </string-array>
    <string name="city_compset">City Compset</string>
    <string name="global">Global</string>
    <string name="summary">Summary :</string>
    <string name="key_positive">Key Positive :</string>
    <string name="key_negative">Key Negative :</string>
    <string name="recommendation">Recommendation :</string>
    <string name="job_title">Job Title</string>
    <string name="gender">Global</string>
    <string name="address">Address</string>
    <string name="select_country">Select Country</string>
    <string name="select_time_zone">Select Time Zone</string>
    <string name="select_state">Select State</string>
    <string name="select_city">Select City</string>
    <string name="create">Create</string>
    <string name="dummy_para">A paragraph (from the Ancient Greek παράγραφος paragraphos,
        "to write beside" or "written beside") is a self-contained unit of a discourse in writing
        dealing with a particular point or idea. A paragraph consists of one or more sentences.</string>
    <string name="select_picture">Select Picture</string>
    <string name="na">N/A</string>
    <string name="start">Start</string>
    <string name="resume">Resume</string>
    <string name="assigned">Assigned</string>
    <string name="submitted">Submitted</string>
    <string name="reviewed">Reviewed</string>
    <string name="auditor_name">AUDITOR NAME</string>
    <string name="alert_msg_no_internet">No internet connection available.
        Please connect and try again</string>
    <string name="agreement">I agree the terms and conditions.</string>
    <string name="clear_pad">Clear Pad</string>
    <string name="save_signature">Save Signature</string>
    <string name="file_text">FILE</string>
    <string name="photo_text">Photo</string>
    <string name="imagepicker_multiselect_not_enough_singular">Select atleast 1 image</string>
    <string name="audit_target">Your Audit Targets</string>
    <string name="you_need">You need to complete the following section to complete your audit.</string>
    <string name="your_goal">Your Goals</string>
    <string name="you_need_assignmnt">You need to complete the following section to complete your assignment.</string>
    <string name="search_with_auditid">Search with Audit ID, Auditor Email ID</string>
    <string name="sorrynoauditfound">Sorry, No Audit Found</string>
    <string name="change_password">Change Password</string>
    <string name="you_can_not_upload">You can add upto 20 attachments and\ \n select only 5 images at a time</string>
    <string name="Continue">Continue</string>
    <string name="enter_oldpass">Enter old password</string>
    <string name="enter_new_pass">Enter new password</string>
    <string name="attachment_name">Attachment Name</string>
    <string name="critical">Critical</string>
    <string name="edit">EDIT</string>
    <string name="staff_name">Staff name</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="roundname">Round Name</string>
    <string name="play_audio">Playing Audio</string>
    <string name="enter_ur_pass">Enter Password</string>
    <string name="done">Done</string>
    <string name="description">Description</string>
    <string name="enter_desc">Enter Description</string>
    <string name="section">Section</string>
    <string name="ref_image">Reference</string>
    <string name="comment">Comment</string>
    <string name="photo">Photo</string>
    <string name="competetion_benchmarking">Competetion Benchmarking</string>
    <string name="modular_under_prcess">Module Under Process</string>
    <string name="rotation">Rotation</string>
    <string name="brush">Brush</string>
    <string name="Opacity">Opacity</string>
    <string name="audit_report">Audit Report</string>
    <string name="rankbyhotel">Rank By Hotel Locations With Department</string>
    <string name="text_start">Start</string>
    <string name="text_score">Score</string>
    <string name="text_subsection">SubSection</string>
    <string name="text_brand_standard">BRAND STANDARD</string>
    <string name="text_section">Section</string>
</resources>