<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/homeNavigate"
            android:title="@string/home"
            android:icon="@drawable/all_of_above"/>

        <!--<item
            android:id="@+id/analysisNavigate"
            android:title="@string/analysis"
            android:icon="@drawable/analysis"/>-->

        <item
            android:id="@+id/standardReportNavigate"
            android:title="@string/standard_report"
            android:icon="@drawable/standard_report"/>

        <!--<item
            android:id="@+id/actionPlanNavigate"
            android:title="@string/action_plan"
            android:icon="@drawable/action_plan"/>

        <item
            android:id="@+id/comptetionBenchmarkingNavigate"
            android:title="@string/competition_benchmarking"
            android:icon="@drawable/news"/>-->

        <item
            android:id="@+id/profileNavigate"
            android:title="@string/profile"
            android:icon="@drawable/profile"/>

        <item
            android:id="@+id/logoutNavigate"
            android:title="@string/logout"
            android:icon="@drawable/logout"/>

    </group>

</menu>