<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/d_2dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:id="@+id/ll_sub_section_border"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/na_status_border"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_sub_section_icon"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_margin="@dimen/d_5dp"
            android:src="@mipmap/complete_status" />
        <TextView
            android:id="@+id/tv_section"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_section"
            android:visibility="gone"
            android:layout_marginTop="-2dp"
            android:fontFamily="@font/nunitosans_semibold"
            android:paddingHorizontal="@dimen/d_3dp"
            android:textAlignment="center"
            android:textColor="@color/c_gray"
            android:textSize="@dimen/text_size_12" />

        <TextView
            android:id="@+id/tv_section_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_brand_standard"
            android:gravity="center"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:paddingHorizontal="@dimen/d_4dp"
            android:paddingVertical="@dimen/d_2dp"
            android:layout_marginLeft="@dimen/d_4dp"
            android:layout_marginRight="@dimen/d_4dp"
            android:textColor="@color/c_gray"
            android:fontFamily="@font/nunitosans_bold"
            android:textSize="@dimen/text_size_12" />

        <TextView
            android:id="@+id/tv_subsection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_subsection"
            android:fontFamily="@font/nunitosans_semibold"
            android:paddingHorizontal="@dimen/d_3dp"
            android:layout_marginTop="@dimen/d_2dp"
            android:visibility="gone"
            android:textAlignment="center"
            android:textColor="@color/c_gray"
            android:textSize="@dimen/text_size_11" />

        <TextView
            android:id="@+id/tv_sub_section_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_brand_standard"
            android:gravity="center"
            android:singleLine="true"
            android:visibility="gone"
            android:ellipsize="marquee"
            android:paddingHorizontal="@dimen/d_4dp"
            android:paddingVertical="@dimen/d_2dp"
            android:layout_marginLeft="@dimen/d_4dp"
            android:layout_marginRight="@dimen/d_4dp"
            android:textColor="@color/c_gray"
            android:fontFamily="@font/nunitosans_bold"
            android:textSize="@dimen/text_size_12" />

        <TextView
            android:id="@+id/tv_question_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0/0"
            android:fontFamily="@font/nunitosans_semibold"
            android:paddingHorizontal="@dimen/d_3dp"
            android:paddingBottom="@dimen/d_8dp"
            android:textAlignment="center"
            android:textColor="@color/c_gray"
            android:textSize="@dimen/text_size_13" />
        <TextView
            android:id="@+id/tv_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_score"
            android:paddingHorizontal="@dimen/d_1dp"
            android:paddingVertical="@dimen/d_2dp"
            android:layout_marginBottom="@dimen/d_3dp"
            android:textAlignment="center"
            android:textColor="@color/c_yellow"
            android:visibility="gone"
            android:fontFamily="@font/nunitosans_semibold"
            android:textSize="@dimen/text_size_11" />

        <TextView
            android:id="@+id/tv_sub_section_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_start"
            android:padding="@dimen/d_5dp"
            android:layout_margin="@dimen/d_1dp"
            android:maxLines="1"
            android:textAlignment="center"
            android:background="@color/c_light_gray_max"
            android:textColor="@color/c_green"
            android:textSize="@dimen/text_size_14" />


    </LinearLayout>

</androidx.cardview.widget.CardView>