<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar_layout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginTop="@dimen/size10">

                <TextView
                    android:id="@+id/username_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="@dimen/textSize20"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/layout_border"
                    android:padding="@dimen/size10"
                    android:textColor="@color/colorBlack"/>

            </RelativeLayout>

            <EditText
                android:id="@+id/otpLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enteryourotp"
                android:padding="@dimen/padding_5"
                style="@style/text_medium"
                android:background="@drawable/change_password_border"
                android:layout_marginStart="@dimen/margin_20"
                android:layout_marginEnd="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_20"/>

            <EditText
                android:id="@+id/password_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enteryourpassword"
                android:inputType="textPassword"
                android:padding="@dimen/padding_5"
                style="@style/text_medium"
                android:background="@drawable/change_password_border"
                android:layout_marginStart="@dimen/margin_20"
                android:layout_marginEnd="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_20"/>

            <EditText
                android:id="@+id/confirm_password_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reenteredpassword"
                android:layout_centerHorizontal="true"
                android:inputType="textPassword"
                android:padding="@dimen/padding_5"
                style="@style/text_medium"
                android:background="@drawable/change_password_border"
                android:layout_marginStart="@dimen/margin_20"
                android:layout_marginEnd="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_20"/>

            <Button
                android:id="@+id/resetButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/resetpassword"
                android:background="@color/appThemeColour"
                android:textColor="@color/colorWhite"
                android:minHeight="@dimen/search_btn_height"
                android:padding="@dimen/size5"
                android:layout_marginStart="@dimen/margin_20"
                android:layout_marginEnd="@dimen/margin_20"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_20"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>