<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.Audit.AuditSectionsActivity">

    <include layout="@layout/toolbar_layout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_10"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/size100"
                android:layout_height="@dimen/size100"
                android:layout_gravity="center"
                android:src="@mipmap/audit_logo"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/audit_target"
                android:textSize="@dimen/textSize18"
                android:textStyle="bold"
                android:padding="@dimen/padding_5"
                android:gravity="center"
                android:textColor="@color/colorBlack" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/you_need"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/textSize16"
                android:gravity="center"
                android:padding="@dimen/padding_5"/>

            <include
                layout="@layout/audit_questions_head_layout" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:layout_marginTop="@dimen/margin_20"
                android:gravity="center"
                android:orientation="horizontal">



                    <LinearLayout
                        android:id="@+id/ll_brand_standard"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/submitted_status_border"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/brand_standard_icon"
                            android:layout_width="@dimen/icon_size"
                            android:layout_height="@dimen/icon_size"
                            android:layout_marginTop="@dimen/margin_10"
                            android:src="@mipmap/submitted_status_icon"/>

                        <TextView
                            android:id="@+id/brand_standard_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/brand_standard"
                            android:textAlignment="center"
                            android:padding="10dp"
                            android:textColor="@color/scoreGreen"
                            android:textSize="@dimen/layout_text_size" />

                        <TextView
                            android:id="@+id/brand_standard_start_btn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/start"
                            android:padding="@dimen/padding_10"
                            android:layout_margin="@dimen/size1"
                            android:textAlignment="center"
                            android:background="@color/extremeLightGrey"
                            android:textColor="@color/scoreGreen"
                            android:textSize="@dimen/layout_text_size" />


                    </LinearLayout>




            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>